<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/gray_light"
    android:layout_marginBottom="8dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/itemProductionCompanyLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemProductionCompanyImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/itemProductionCompanyTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_production_company_name_text"
                android:textColor="@color/grey_242"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemProductionCompanyNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey_242"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Empresa 1">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemProductionCompanyOriginCountryLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemProductionCompanyImageView"
            app:layout_constraintTop_toBottomOf="@+id/itemProductionCompanyLinearLayout">

            <TextView
                android:id="@+id/itemProductionCompanyOriginCountryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_production_company_country_text"
                android:textColor="@color/grey_242"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemProductionCompanyCountryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey_242"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="País 1">

            </TextView>

        </LinearLayout>

        <ImageView
            android:id="@+id/itemProductionCompanyImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/item_production_company_image_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>