<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/movieDetailsToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_dd4"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/movieDetailsImageView"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/movie_details_content_description_movie_image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsTitleTextView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieDetailsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textColor="@color/grey_242"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsToolBar"
        tools:text="Título do filme" />

    <LinearLayout
        android:id="@+id/movieDetailsVoteAverageLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsImageView">

        <TextView
            android:id="@+id/movieDetailsVoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_vote_average_text"
            android:textColor="@color/grey_242"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/movieDetailsVoteAverageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="2dp"
            android:textColor="@color/grey_242"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_baseline_star_24"
            tools:text="10.0">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/movieDetailsDateLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsVoteAverageLinearLayout">

        <TextView
            android:id="@+id/movieDetailsReleaseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_release_date_movie_text"
            android:textColor="@color/grey_242"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/movieDetailsDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/grey_242"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="10/10/2020">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/movieDetailsGenresTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/movie_details_release_gender_text"
        android:textColor="@color/grey_242"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsDateLinearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieDetailsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsGenresTextView"
        tools:itemCount="10"
        tools:listitem="@layout/item_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>